<resources>
    <!--    App name-->
    <string name="app_name">Meet In The Middle</string>

    <!--    Text on UI components-->
    <string name="enter_text">Enter text</string>
    <string name="options">Options</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_label">No account yet?</string>
    <string name="signup_label">Already have an account?</string>
    <string name="to_login">Login now</string>
    <string name="to_signup">Sign up now</string>
    <string name="chat_name_hint">Chat Name</string>
    <string name="create_button">Create</string>
    <string name="avatar">W</string>
    <string name="copyButtonTitle">Copy</string>
    <string name="leaveChatButtonTitle">Leave Chat</string>

    <!--    Message and chat model-->
    <string name="chat_name">Chat %d</string>
    <string name="user_name">Username</string>
    <string name="test_message">How are you doing? Go. I wish you good luck. Happy New Year</string>
    <string name="time">20:00</string>
    <string name="your_name">You</string>

    <!--    Validation Error Messages-->
    <string name="non_empty_validation_error">should not be empty</string>
    <string name="alphanumeric_validation_error">should contain only latin letters or digits</string>

    <!--    Events Error Messages-->
    <string name="error">Error</string>
    <string name="sign_up_error">Something went wrong on signing up</string>
    <string name="sign_up_error_title">Sign up error</string>
    <string name="sign_up_ok">You\'ve signed up successfully!</string>
    <string name="sign_up_ok_title">Signed up</string>
    <string name="sign_in_error">Sorry, no user with such login and password</string>
    <string name="sign_in_error_title">Sign in error</string>
    <string name="join_chat_error">Unable to join chat</string>
    <string name="join_chat_error_title">Join Error</string>
    <string name="chat_link_error">Unable to get chat link</string>
    <string name="chat_link_error_title">Link Error</string>
    <string name="user_list_error">Unable to get users list</string>

    <!--    Intent Variables-->
    <string name="chat_name_variable">chatName</string>

    <!--    URLs-->
    <string name="local_ws_endpoint">ws://10.0.2.2:8080/ws</string>
    <string name="local_http_url">http://10.0.2.2:8080</string>
    <string name="ws_endpoint">ws://mim-server-dev.eu-central-1.elasticbeanstalk.com/ws</string>
    <string name="http_url">http://mim-server-dev.eu-central-1.elasticbeanstalk.com</string>
    <string name="title_activity_join_chat">JoinChatActivity</string>

    <!--    Alerts-->
    <string name="confirmation_title">Confirmation</string>
    <string name="leave_chat_alert">Are your sure you want to leave this chat?</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
