<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingVertical="10dp"
    android:paddingStart="15dp"
    android:paddingLeft="15dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/chatName"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignStart="@id/message"
        android:layout_alignLeft="@id/message"
        android:layout_alignTop="@id/userAvatar"
        android:fontFamily="sans-serif-black"
        android:text="@string/chat_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_below="@id/userName"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/userAvatar"
        android:layout_toRightOf="@id/userAvatar"
        android:text="@string/test_message"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/time"
        android:textSize="12sp" />

    <com.mimteam.mimclient.components.ChatAvatar
        android:id="@+id/userAvatar"
        android:layout_width="57dp"
        android:layout_height="53dp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatName"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/userAvatar"
        android:layout_toRightOf="@id/userAvatar"
        android:fontFamily="sans-serif-black"
        android:text="@string/user_name"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
</RelativeLayout>
