<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text="@string/sign_in"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/toSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/signInLabel"
        android:layout_toEndOf="@id/signInLabel"
        android:layout_alignTop="@id/signInLabel"
        android:layout_alignBottom="@id/signInLabel"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textSize="17sp"
        android:textColor="@color/gray"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/signInLoginEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/signInLabel"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/login"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/signInPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/signInLoginEdit"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/signInPasswordEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textSize="15sp" />

</RelativeLayout>
